--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.2.14",
     "multer": "^1.4.1",
+    "sharp": "^0.21.1",
     "static-asset": "^0.6.0"
   }
 }
